fix SEO issue remove logo H1 and align canonicalURL

--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -47,13 +47,14 @@ footer {
 }
 
 .logo {
-    h1 {
+    
         margin: 0;
         font-size: 1.8em;
+        font-weight: 800;
 
         a, a:visited {
             text-decoration: none;
             color: inherit;
         }
-    }
+    
 }
